# Jellyfin-lyrics-v

./: .gitignore  README.md  pyproject.toml
lyrics_fetcher/: __init__.py  cli.py  log_config.py
lyrics_fetcher/core/: lrclib_fetcher.py  utils.py
lyrics_fetcher/errors/: __init__.py  app_errors.py  base_error.py
lyrics_fetcher/models/: __init__.py  lyrics_response.py  track_model.py
lyrics_fetcher/services/: __init__.py  lrclib_service.py
